# DeliveryBD

./: .env.example  .gitattributes  .gitignore  .vercelignore  CHANGELOG.md  DIVIDA_TECNICA.md  ESPECIFICACAO_CONFIRMACAO_COLETA.md  README.md  WORKFLOW.md  pyproject.toml  requirements.lock.txt  requirements.txt  start.ps1  vercel.json
.github/workflows/: ci.yml
agents/: agente_assistente.py  agente_classificador.py  agente_comunicador.py  agente_ingestor.py  agente_monitor.py  agente_montador.py  agente_resolvedor.py  orquestrador.py
api/: main.py
config/: requirements.txt  start.ps1
core/: auth.py  cache.py  config.py  db.py  email_service.py  historico.py  models.py
data/: schema.sql
data/demo/: Backlog_SAP_OSA_1_06072026.xlsx  Backlog_SAP_OSA_2_06072026.xlsx  Backlog_SAP_OSA_ERRO_06072026.xlsx  Backlog_UPS_WMS_ITJ_1_06072026.xlsx  Backlog_UPS_WMS_ITJ_2_06072026.xlsx  Backlog_UPS_WMS_ITJ_ERRO_06072026.xlsx  Remessas_SAP_OSA_08062026.xlsx  Remessas_SAP_OSA_30062026.xlsx  Remessas_SAP_OSA_ATA_08062026.xlsx  Remessas_SAP_OSA_BACKLOG_30062026.xlsx  UPS_WMS_Export_ITJ_08062026.xlsx  (+2 more)
docs/: ARQUITETURA.md  CI.md  DIVIDA_TECNICA.md  ONBOARDING.md  PROCESSO_SQUAD.md  WORKFLOW.md
frontend/: contingencia-db.js  index.html
scripts/: criar_indexes.py  gerar_backlog_demos.py  gerar_demos.py  gerar_planilha_cotacao.py  seed_demo.py  seed_erro_acoes.py  seed_historico_demo.py  seed_stress_test.py  seed_tipos_erro.py  seed_transportadoras.py  setup_producao.py  simular_erros_demo.py  testar_offline.py
tests/: executar_testes.py  test_smoke.py  testar_offline.py
